--- a/src/main/resources/project/Chessboard.fxml
+++ b/src/main/resources/project/Chessboard.fxml
@@ -558,7 +558,7 @@
       </Label>
       <Button fx:id="saveGame" layoutX="180.0" layoutY="22.0" mnemonicParsing="false" onMouseClicked="#saveGame" text="Save" />
       <Button fx:id="loadGame" layoutX="353.0" layoutY="22.0" mnemonicParsing="false" onMouseClicked="#loadGame" text="Load" />
-      <Button fx:id="pawnPromotion" layoutX="514.0" layoutY="22.0" mnemonicParsing="false" onMouseClicked="#promotion" text="Promotion" />
+      <Button fx:id="pawnPromotion" layoutX="514.0" layoutY="22.0" mnemonicParsing="false" onMouseClicked="#pawnPromotion" text="Promotion" />
       <Label layoutX="107.0" layoutY="2.0" text="Save name" />
       <TextField fx:id="saveName" layoutX="98.0" layoutY="22.0" prefHeight="25.0" prefWidth="76.0" />
       <Label layoutX="282.0" layoutY="2.0" text="Save name" />
