--- a/src/main/resources/project/Chessboard.fxml
+++ b/src/main/resources/project/Chessboard.fxml
@@ -12,9 +12,9 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="680.0" prefWidth="680.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="project.ChessController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="780.0" prefWidth="680.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="project.ChessController">
    <children>
-      <GridPane fx:id="tileColors" gridLinesVisible="true" prefHeight="560.0" prefWidth="560.0" AnchorPane.bottomAnchor="60.0" AnchorPane.leftAnchor="60.0" AnchorPane.rightAnchor="60.0" AnchorPane.topAnchor="60.0">
+      <GridPane fx:id="tileColors" gridLinesVisible="true" layoutY="160.0" maxHeight="569.0" maxWidth="560.0" minHeight="560.0" minWidth="560.0" prefHeight="560.0" prefWidth="560.0" AnchorPane.bottomAnchor="60.0" AnchorPane.leftAnchor="60.0" AnchorPane.rightAnchor="60.0" AnchorPane.topAnchor="160.0">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -36,7 +36,7 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
       </GridPane>
-      <GridPane fx:id="sprites" gridLinesVisible="true" layoutX="10.0" layoutY="10.0" prefHeight="560.0" prefWidth="560.0" AnchorPane.bottomAnchor="60.0" AnchorPane.leftAnchor="60.0" AnchorPane.rightAnchor="60.0" AnchorPane.topAnchor="60.0">
+      <GridPane fx:id="sprites" gridLinesVisible="true" layoutX="10.0" layoutY="160.0" maxHeight="569.0" maxWidth="560.0" minHeight="560.0" minWidth="560.0" prefHeight="560.0" prefWidth="560.0" AnchorPane.bottomAnchor="60.0" AnchorPane.leftAnchor="60.0" AnchorPane.rightAnchor="60.0" AnchorPane.topAnchor="160.0">
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -426,7 +426,7 @@
                      <Image url="@bK.png" />
                   </image>
                </ImageView>
-               <ImageView id="72" fx:id="sprite72" fitHeight="70.0" fitWidth="70.0" onMouseClicked="#testClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="0" GridPane.valignment="CENTER">
+               <ImageView id="72" fx:id="sprite72" fitHeight="70.0" fitWidth="69.0" onMouseClicked="#testClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="0" GridPane.valignment="CENTER">
                <GridPane.margin>
                <Insets />
                </GridPane.margin>
@@ -476,17 +476,17 @@
                </ImageView>
          </children>
       </GridPane>
-      <Label layoutX="25.0" layoutY="81.0" text="8">
+      <Label layoutX="25.0" layoutY="113.0" text="8">
          <font>
             <Font name="Baskerville Old Face" size="24.0" />
          </font>
       </Label>
-      <Label layoutX="25.0" layoutY="151.0" text="7">
+      <Label layoutX="25.0" layoutY="185.0" text="7">
          <font>
             <Font name="Baskerville Old Face" size="24.0" />
          </font>
       </Label>
-      <Label layoutX="25.0" layoutY="225.0" text="6">
+      <Label layoutX="25.0" layoutY="251.0" text="6">
          <font>
             <Font name="Baskerville Old Face" size="24.0" />
          </font>
@@ -556,14 +556,19 @@
             <Font name="Baskerville Old Face" size="24.0" />
          </font>
       </Label>
-      <Button fx:id="saveGame" layoutX="180.0" layoutY="22.0" mnemonicParsing="false" onMouseClicked="#saveGame" text="Save" />
-      <Button fx:id="loadGame" layoutX="353.0" layoutY="22.0" mnemonicParsing="false" onMouseClicked="#loadGame" text="Load" />
-      <Button fx:id="pawnPromotion" layoutX="514.0" layoutY="22.0" mnemonicParsing="false" onMouseClicked="#pawnPromotion" text="Promotion" />
-      <Label layoutX="107.0" layoutY="2.0" text="Save name" />
-      <TextField fx:id="saveName" layoutX="98.0" layoutY="22.0" prefHeight="25.0" prefWidth="76.0" />
-      <Label layoutX="282.0" layoutY="2.0" text="Save name" />
-      <TextField fx:id="loadName" layoutX="273.0" layoutY="22.0" prefHeight="25.0" prefWidth="76.0" />
-      <Label layoutX="441.0" layoutY="2.0" text="Piece name" />
-      <TextField fx:id="promotionName" layoutX="433.0" layoutY="22.0" prefHeight="25.0" prefWidth="76.0" />
+      <Button fx:id="saveGame" layoutX="180.0" layoutY="127.0" mnemonicParsing="false" onMouseClicked="#saveGame" text="Save" />
+      <Button fx:id="loadGame" layoutX="347.0" layoutY="127.0" mnemonicParsing="false" onMouseClicked="#loadGame" text="Load" />
+      <Button fx:id="pawnPromotion" layoutX="519.0" layoutY="127.0" mnemonicParsing="false" onMouseClicked="#pawnPromotion" text="Promotion" />
+      <Label layoutX="107.0" layoutY="105.0" text="Save name" />
+      <TextField fx:id="saveName" layoutX="98.0" layoutY="127.0" prefHeight="25.0" prefWidth="76.0" />
+      <Label layoutX="276.0" layoutY="105.0" text="Save name" />
+      <TextField fx:id="loadName" layoutX="267.0" layoutY="127.0" prefHeight="25.0" prefWidth="76.0" />
+      <Label layoutX="443.0" layoutY="105.0" text="Piece name" />
+      <TextField fx:id="promotionName" layoutX="435.0" layoutY="127.0" prefHeight="25.0" prefWidth="76.0" />
+      <Label fx:id="messages" layoutX="93.0" layoutY="29.0" prefHeight="37.0" prefWidth="500.0" style="-fx-background-color: WHITE; -fx-border-color: DARKGREY; -fx-border-width: 1; -fx-border-radius: 5;">
+         <font>
+            <Font name="Baskerville Old Face" size="18.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
