--- a/src/main/resources/project/Chessboard.fxml
+++ b/src/main/resources/project/Chessboard.fxml
@@ -12,9 +12,9 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="780.0" prefWidth="680.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="project.ChessController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="745.0" prefWidth="680.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="project.ChessController">
    <children>
-      <GridPane fx:id="tileColors" gridLinesVisible="true" layoutY="160.0" maxHeight="569.0" maxWidth="560.0" minHeight="560.0" minWidth="560.0" prefHeight="560.0" prefWidth="560.0" AnchorPane.bottomAnchor="60.0" AnchorPane.leftAnchor="60.0" AnchorPane.rightAnchor="60.0" AnchorPane.topAnchor="160.0">
+      <GridPane fx:id="tileColors" gridLinesVisible="true" layoutY="125.0" maxHeight="569.0" maxWidth="560.0" minHeight="560.0" minWidth="560.0" prefHeight="560.0" prefWidth="560.0" AnchorPane.bottomAnchor="60.0" AnchorPane.leftAnchor="60.0" AnchorPane.rightAnchor="60.0" AnchorPane.topAnchor="125.0">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -36,7 +36,7 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
       </GridPane>
-      <GridPane fx:id="sprites" gridLinesVisible="true" layoutX="10.0" layoutY="160.0" maxHeight="569.0" maxWidth="560.0" minHeight="560.0" minWidth="560.0" prefHeight="560.0" prefWidth="560.0" AnchorPane.bottomAnchor="60.0" AnchorPane.leftAnchor="60.0" AnchorPane.rightAnchor="60.0" AnchorPane.topAnchor="160.0">
+      <GridPane fx:id="sprites" gridLinesVisible="true" layoutX="10.0" layoutY="125.0" maxHeight="569.0" maxWidth="560.0" minHeight="560.0" minWidth="560.0" prefHeight="560.0" prefWidth="560.0" AnchorPane.bottomAnchor="60.0" AnchorPane.leftAnchor="60.0" AnchorPane.rightAnchor="60.0" AnchorPane.topAnchor="125.0">
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -476,96 +476,96 @@
                </ImageView>
          </children>
       </GridPane>
-      <Label layoutX="25.0" layoutY="113.0" text="8">
+      <Label layoutX="26.0" layoutY="145.0" text="8">
          <font>
             <Font name="Baskerville Old Face" size="24.0" />
          </font>
       </Label>
-      <Label layoutX="25.0" layoutY="185.0" text="7">
+      <Label layoutX="26.0" layoutY="217.0" text="7">
          <font>
             <Font name="Baskerville Old Face" size="24.0" />
          </font>
       </Label>
-      <Label layoutX="25.0" layoutY="251.0" text="6">
+      <Label layoutX="26.0" layoutY="283.0" text="6">
          <font>
             <Font name="Baskerville Old Face" size="24.0" />
          </font>
       </Label>
-      <Label layoutX="25.0" layoutY="293.0" text="5">
+      <Label layoutX="27.0" layoutY="359.0" text="5">
          <font>
             <Font name="Baskerville Old Face" size="24.0" />
          </font>
       </Label>
-      <Label layoutX="26.0" layoutY="359.0" text="4">
+      <Label layoutX="27.0" layoutY="422.0" text="4">
          <font>
             <Font name="Baskerville Old Face" size="24.0" />
          </font>
       </Label>
-      <Label layoutX="25.0" layoutY="430.0" text="3">
+      <Label layoutX="27.0" layoutY="494.0" text="3">
          <font>
             <Font name="Baskerville Old Face" size="24.0" />
          </font>
       </Label>
-      <Label layoutX="26.0" layoutY="503.0" text="2">
+      <Label layoutX="27.0" layoutY="564.0" text="2">
          <font>
             <Font name="Baskerville Old Face" size="24.0" />
          </font>
       </Label>
-      <Label layoutX="26.0" layoutY="569.0" text="1">
+      <Label layoutX="27.0" layoutY="633.0" text="1">
          <font>
             <Font name="Baskerville Old Face" size="24.0" />
          </font>
       </Label>
-      <Label layoutX="87.0" layoutY="638.0" text="a">
+      <Label layoutX="89.0" layoutY="696.0" text="a">
          <font>
             <Font name="Baskerville Old Face" size="24.0" />
          </font>
       </Label>
-      <Label layoutX="158.0" layoutY="638.0" text="b">
+      <Label layoutX="160.0" layoutY="696.0" text="b">
          <font>
             <Font name="Baskerville Old Face" size="24.0" />
          </font>
       </Label>
-      <Label layoutX="227.0" layoutY="638.0" text="c">
+      <Label layoutX="229.0" layoutY="696.0" text="c">
          <font>
             <Font name="Baskerville Old Face" size="24.0" />
          </font>
       </Label>
-      <Label layoutX="298.0" layoutY="638.0" text="d">
+      <Label layoutX="300.0" layoutY="696.0" text="d">
          <font>
             <Font name="Baskerville Old Face" size="24.0" />
          </font>
       </Label>
-      <Label layoutX="368.0" layoutY="638.0" text="e">
+      <Label layoutX="370.0" layoutY="696.0" text="e">
          <font>
             <Font name="Baskerville Old Face" size="24.0" />
          </font>
       </Label>
-      <Label layoutX="441.0" layoutY="638.0" text="f">
+      <Label layoutX="443.0" layoutY="696.0" text="f">
          <font>
             <Font name="Baskerville Old Face" size="24.0" />
          </font>
       </Label>
-      <Label layoutX="509.0" layoutY="638.0" text="g">
+      <Label layoutX="511.0" layoutY="696.0" text="g">
          <font>
             <Font name="Baskerville Old Face" size="24.0" />
          </font>
       </Label>
-      <Label layoutX="576.0" layoutY="638.0" text="h">
+      <Label layoutX="578.0" layoutY="696.0" text="h">
          <font>
             <Font name="Baskerville Old Face" size="24.0" />
          </font>
       </Label>
-      <Button fx:id="saveGame" layoutX="180.0" layoutY="127.0" mnemonicParsing="false" onMouseClicked="#saveGame" text="Save" />
-      <Button fx:id="loadGame" layoutX="347.0" layoutY="127.0" mnemonicParsing="false" onMouseClicked="#loadGame" text="Load" />
-      <Button fx:id="pawnPromotion" layoutX="519.0" layoutY="127.0" mnemonicParsing="false" onMouseClicked="#pawnPromotion" text="Promotion" />
-      <Label layoutX="107.0" layoutY="105.0" text="Save name" />
-      <TextField fx:id="saveName" layoutX="98.0" layoutY="127.0" prefHeight="25.0" prefWidth="76.0" />
-      <Label layoutX="276.0" layoutY="105.0" text="Save name" />
-      <TextField fx:id="loadName" layoutX="267.0" layoutY="127.0" prefHeight="25.0" prefWidth="76.0" />
-      <Label layoutX="443.0" layoutY="105.0" text="Piece name" />
-      <TextField fx:id="promotionName" layoutX="435.0" layoutY="127.0" prefHeight="25.0" prefWidth="76.0" />
-      <Label fx:id="messages" layoutX="93.0" layoutY="29.0" prefHeight="37.0" prefWidth="500.0" style="-fx-background-color: WHITE; -fx-border-color: DARKGREY; -fx-border-width: 1; -fx-border-radius: 5;">
+      <Button fx:id="saveGame" layoutX="180.0" layoutY="81.0" mnemonicParsing="false" onMouseClicked="#saveGame" text="Save" />
+      <Button fx:id="loadGame" layoutX="349.0" layoutY="81.0" mnemonicParsing="false" onMouseClicked="#loadGame" text="Load" />
+      <Button fx:id="pawnPromotion" layoutX="521.0" layoutY="81.0" mnemonicParsing="false" onMouseClicked="#pawnPromotion" text="Promotion" />
+      <Label layoutX="107.0" layoutY="62.0" text="Save name" />
+      <TextField fx:id="saveName" layoutX="98.0" layoutY="81.0" prefHeight="25.0" prefWidth="76.0" />
+      <Label layoutX="278.0" layoutY="62.0" text="Save name" />
+      <TextField fx:id="loadName" layoutX="269.0" layoutY="81.0" prefHeight="25.0" prefWidth="76.0" />
+      <Label layoutX="444.0" layoutY="62.0" text="Piece name" />
+      <TextField fx:id="promotionName" layoutX="437.0" layoutY="81.0" prefHeight="25.0" prefWidth="76.0" />
+      <Label fx:id="messageDisplay" alignment="CENTER" layoutX="95.0" layoutY="21.0" prefHeight="35.0" prefWidth="500.0" style="-fx-background-color: WHITE; -fx-border-color: DARKGREY; -fx-border-width: 1; -fx-border-radius: 5;">
          <font>
             <Font name="Baskerville Old Face" size="18.0" />
          </font>
